# stream_sub_translator

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  README.ru.md  Stream Subtitle Translator Bootstrap Web Only.spec  Stream Subtitle Translator Bootstrap.spec  Stream Subtitle Translator.spec  build-bootstrap-launcher-web-only.bat  build-bootstrap-launcher.bat  build-desktop.bat  build-remote-lite.ps1  publish-desktop-releases-web-only.ps1  publish-desktop-releases.ps1  requirements.controller.txt  requirements.runtime.ai.txt  requirements.runtime.base.txt  requirements.torch.cpu.txt  requirements.txt  start-remote-controller.bat  start-remote-worker.bat  start.bat  update.bat
app-runtime/: README.md  bootstrap-python.ps1  requirements.torch.cuda.txt  start.bat
backend/: __init__.py  app.py  bootstrap_pip_pins.py  config.py  models.py  preflight.py  run.py  run_controller.py  run_worker.py  runtime_paths.py  server_runtime.py  versioning.py  ws_manager.py
crates/voicesub-runtime/: Cargo.toml
crates/voicesub-runtime/src/: service.rs
crates/voicesub-runtime/src/http/: mod.rs  router.rs  runtime.rs  update_service.rs  updates.rs
data/: config.example.json
desktop/: __init__.py  asr_config_repair.py  backend_host.py  bootstrap_launcher.py  bootstrap_launcher_web_only.py  bootstrap_payload.py  browser_worker_launcher.py  build_bootstrap_payload.py  deps_install_trace.py  launcher.py  launcher_api.py  launcher_backend.py  launcher_bootstrap.py  launcher_context.py  launcher_window.py  runtime_bootstrap.py  splash_i18n_cjk.py  splash_screen.py  subprocess_trace.py  ui_locale.py
docs/: CHANGELOG.md  DESKTOP_RELEASE_CHANGELOG_0.2.9.0.md  DESKTOP_RELEASE_CHANGELOG_0.2.9.1.md  DESKTOP_RELEASE_CHANGELOG_0.2.9.2.md  DESKTOP_RELEASE_CHANGELOG_0.3.0.md  DESKTOP_RELEASE_CHANGELOG_0.3.1.md  DESKTOP_RELEASE_CHANGELOG_0.3.2.md  DESKTOP_RELEASE_CHANGELOG_0.4.0.md  ETALON_RUNTIME_VERIFICATION.md  MANUAL_SMOKE_CHECKLIST_NON_REMOTE.md  REMOTE_IMPLEMENTATION_PLAN.md  REMOTE_MODE_ISOLATION.md  TECHNICAL_ARCHITECTURE.en.md  TECHNICAL_ARCHITECTURE.md  WIKI.en.md  WIKI.ru.md  desktop-bootstrap-roadmap.md  release-notes-v0.4.4.md
frontend/: google_asr.html  google_asr_experimental.html  index.html  remote_controller_bridge.html  remote_worker_bridge.html
hooks/: hook-webrtcvad.py
overlay/: overlay.html  overlay.js
scripts/: voicesub-locale-overrides.mjs
src/: App.svelte
src-tauri/: build.rs  tauri.conf.json
src-tts/: App.svelte
tests/: helpers.py  test_api_and_websockets.py  test_api_trace_log.py  test_asr_provider_contract.py  test_asr_provider_selection.py  test_backend_architecture.py  test_bind_policy.py  test_bootstrap_launcher.py  test_bootstrap_launcher_web_only.py  test_bootstrap_payload.py  test_bootstrap_pip_pins.py  test_bootstrap_release_tag_filter.py  test_browser_asr_gateway.py  test_browser_asr_observability.py  test_browser_asr_service.py  test_browser_asr_session_logic.py  test_browser_worker_contract.py  test_build_bootstrap_payload.py  test_cache_manager.py  test_config_migrations.py  test_config_schema_export.py  test_config_translation_providers.py  test_dashboard_idle_preview.py  test_dashboard_logging_contract.py  test_deps_install_trace.py  test_desktop_asr_config_repair.py  test_desktop_backend_host.py  test_desktop_bootstrap_payload.py  test_desktop_browser_worker_launch.py  test_desktop_launcher_config.py  test_desktop_launcher_startup.py  test_desktop_managed_runtime_packaging.py  (+58 more)
(+322 files in other folders)
